添加一些测试方法

--- a/Blog.Core.Api/appsettings.json
+++ b/Blog.Core.Api/appsettings.json
@@ -63,7 +63,7 @@
   // *** 多库操作，把 MutiDBEnabled 设为true，其他的从库Enabled也为true **；
   // 具体配置看视频：https://www.bilibili.com/video/BV1BJ411B7mn?p=6
 
-  "MainDB": "WMBLOG_SQLITE", //当前项目的主库，所对应的连接字符串的Enabled必须为true
+  "MainDB": "WMBLOG_MYSQL", //当前项目的主库，所对应的连接字符串的Enabled必须为true
   "MutiDBEnabled": false, //是否开启多库模式
   "CQRSEnabled": false, //是否开启读写分离模式,必须是单库模式，且数据库类型一致，比如都是SqlServer
   "DBS": [
@@ -78,7 +78,7 @@
     {
       "ConnId": "WMBLOG_SQLITE",
       "DBType": 2,
-      "Enabled": true,
+      "Enabled": false,
       "HitRate": 50, // 值越大，优先级越高
       "Connection": "WMBlog.db" //sqlite只写数据库名就行
     },
@@ -101,9 +101,9 @@
     {
       "ConnId": "WMBLOG_MYSQL",
       "DBType": 0,
-      "Enabled": false,
+      "Enabled": true,
       "HitRate": 20,
-      "Connection": "server=.;Database=ddd;Uid=root;Pwd=123456;Port=10060;Allow User Variables=True;"
+      "Connection": "Server=193.112.107.111; Port=3307;Stmt=; Database=blogadmin;CharSet=UTF8mb4; Uid=root; Pwd=123456;"
     },
     {
       "ConnId": "WMBLOG_MYSQL_2",
