--- a/Blog.Core.Api/appsettings.json
+++ b/Blog.Core.Api/appsettings.json
@@ -56,7 +56,7 @@
     "SeedDBEnabled": true, //只生成表结构
     "SeedDBDataEnabled": true, //生成表,并初始化数据
     "Author": "Blog.Core",
-    "UseLoadTest": false
+    "UseLoadTest": false//是否开启测试环境
   },
 
   // 请配置MainDB为你想要的主库的ConnId值,并设置对应的Enabled为true；
@@ -144,7 +144,7 @@
     },
     "ApiName": "Blog.Core",
     "IdentityServer4": {
-      "Enabled": false, // 这里默认是false，表示使用jwt，如果设置为true，则表示系统使用Ids4模式
+      "Enabled": true, // 这里默认是false，表示使用jwt，如果设置为true，则表示系统使用Ids4模式
       "AuthorizationUrl": "http://localhost:5004", // 认证中心域名
       "ApiName": "blog.core.api" // 资源服务器
     },
@@ -175,7 +175,7 @@
     "Consul": {
       "Enabled": false
     },
-    "IpRateLimit": {
+    "IpRateLimit": {//压力测试的时候关闭
       "Enabled": true
     }
   },
