--- a/Blog.Core.Api/appsettings.json
+++ b/Blog.Core.Api/appsettings.json
@@ -91,7 +91,7 @@
   //备用连接的ConnId配置为主库的ConnId+数字即可,比如主库的ConnId为Main,那么备用连接的ConnId为Mian1
   //主库、备用库无需数据库类型一致!
   //备用库不会有程序维护,需要手动维护
-  "MainDB": "Main", //当前项目的主库，所对应的连接字符串的Enabled必须为true
+  "MainDB": "WMBLOG_MYSQL_0", //当前项目的主库，所对应的连接字符串的Enabled必须为true
   "DBS": [
     /*
       对应下边的 DBType
@@ -104,17 +104,23 @@
       Kdbndp = 6,//人大金仓
     */
     {
-      "ConnId": "Main",
-      "DBType": 2,
+      "ConnId": "WMBLOG_MYSQL_0",
+      "DBType": 0,
       "Enabled": true,
-      "Connection": "WMBlog.db", //sqlite只写数据库名就行
-      "Slaves": [
-        {
-          "HitRate": 0,// 值越大，优先级越高 0不使用
-          "Connection": "WMBlog2.db"
-        }
-      ]
+      "Connection": "server=localhost;Database=health;Uid=root;Pwd=chao411123;Port=3306;Allow User Variables=True;"
     },
+    //{
+    //  "ConnId": "Main",
+    //  "DBType": 2,
+    //  "Enabled": true,
+    //  "Connection": "WMBlog.db", //sqlite只写数据库名就行
+    //  "Slaves": [
+    //    {
+    //      "HitRate": 0, // 值越大，优先级越高 0不使用
+    //      "Connection": "WMBlog2.db"
+    //    }
+    //  ]
+    //},
     {
       "ConnId": "Main2",
       "DBType": 2,
@@ -122,7 +128,7 @@
       "Connection": "WMBlog3.db", //sqlite只写数据库名就行
       "Slaves": [
         {
-          "HitRate": 0,// 值越大，优先级越高 0不使用
+          "HitRate": 0, // 值越大，优先级越高 0不使用
           "Connection": "WMBlog4.db"
         }
       ]
@@ -360,4 +366,5 @@
     "Address": "http://localhost:5341/",
     "ApiKey": ""
   }
+
 }
