多token方式验证

--- a/Blog.Core.Api/appsettings.json
+++ b/Blog.Core.Api/appsettings.json
@@ -18,8 +18,8 @@
   },
   "AllowedHosts": "*",
   "Redis": {
-    "Enable": false,
-    "ConnectionString": "127.0.0.1:6379,allowAdmin=true",
+    "Enable": true,
+    "ConnectionString": "127.0.0.1:6388,password=Aa123456,ssl=false,defaultDatabase=4,allowAdmin=true",
     "InstanceName": "" //前缀
   },
   "RabbitMQ": {
